--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-</html>
-    <h1>Joseph's Portfolio</h1>
-    <img src="./jjbiopic.jpg" />
+<html>
+   <h1>Joseph's Portfolio</h1>
+   <img src="./jjbiopic.jpg" />
 </html>
